Fix margin top too big

--- a/css/style.css
+++ b/css/style.css
@@ -197,5 +197,5 @@ ul.alert-dropdown {
 }
 
 .albums-list {
-  margin-top: 200px;
+  margin-top: 10px;
 }
